#7108 closed bug (fixed)
ftpd & telnetd not launched
Reported by: | Pete | Owned by: | phoudoin |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Network & Internet | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | x86 |
Description (last modified by )
If /boot/common/settings/network/services is set up to accept ftp and telnet (by uncommenting) and you try to access these services from another machine, you get nothing but "Connection Refused". (ssh seems to connect OK.)
Connection works as expected in my stable alpha-2 partition, but the problem exists in the hrev40236 nightly. It was first noticed in a local build of hrev39972. (/boot/common/etc files are set up as in the working partition.)
Net access out of Haiku is not impaired.
Change History (12)
comment:1 by , 14 years ago
Description: | modified (diff) |
---|---|
Version: | R1/alpha2 → R1/Development |
follow-up: 4 comment:2 by , 14 years ago
comment:3 by , 14 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:4 by , 14 years ago
Replying to diver:
I've played a bit with it and found a workaround for this problems:
I can't make this work (removing the commenting as well of course!). I'm editing the installed version in .../settings/network, but it's hard to see how editing the source (as shown) would be different.
follow-up: 7 comment:5 by , 14 years ago
Try to run ftpd -D and telnetd -debug in Terminal and it should just work.
comment:6 by , 14 years ago
As a possible further data point, if I run net_server from a Terminal in the working alpha-2 partition, and then ftp and telnet from another machine, I see:
New service telnet Starting service 'telnet' New service ftp Starting service 'ftp' New service ssh Launch service: /boot/common/bin/sshd Launch service: ftpd Launch service: telnetd
Doing the same from the failing installation, I see the same, except for the last two 'Launch' lines, which never happen.
comment:7 by , 14 years ago
Replying to diver:
Try to run ftpd -D and telnetd -debug in Terminal and it should just work.
Yep -- that does it.
So my installed workaround is to create an executable script /boot/home/config/boot/RunDaemons:
#!/bin/sh (while true; do telnetd -debug; done)& ftpd -D
(a while-loop is needed for telnetd because it only accepts the first connection. ftpd OTOH stays running with the -D switch.)
Then I add '/boot/home/config/boot/RunDaemons&' to UserBootScript and I get access as before. A separate script is needed so the loop can keep running without holding UserBootScript open.
comment:8 by , 14 years ago
Seems like I (falsely) assumed that if it works this way in Terminal it should work in services too, apparently that doesn't work like that. Oh well.
comment:9 by , 14 years ago
Owner: | changed from | to
---|---|
Status: | assigned → in-progress |
comment:11 by , 14 years ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
I've played a bit with it and found a workaround for this problems: