Port value in servent struct is in network byte order. This was making net_server listening wrong service port. Telnet & FTP works again in non stand-alone mode. This close #7108.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@40241 a95241bf-73f2-0310-859d-f6bbb57e9c96